fix extra padding on video page

--- a/webroot/css/styles.less
+++ b/webroot/css/styles.less
@@ -1507,8 +1507,8 @@ img {
 /* videos page */
 .videos {
 	
-	margin-top: 25px;
-	margin-left: 20px;
+	// margin-top: 25px;
+	// margin-left: 20px;
 	width: 850px;
 	
 	
